[project]
name = "layermap-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "anyio>=4.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.12",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "python-multipart>=0.0.9",
    "redis[asyncio]>=5.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.29.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_functions = "test_*"
timeout = 10
